서버 클라 암호화 방식 추가

--- a/src/common/config.json
+++ b/src/common/config.json
@@ -37,7 +37,8 @@
     },
     "trustIP": [],
     "log": true,
-    "secret": "vss!32lk",
+    "secret_client": "vipjer#2309f=][]d0#fkFsmn..1@#)(=+=.",
+    "secret_server": "v0o3kkv..,=0k,xnmzdlv#$$@_+=1@#4ff()",
     "port": 9999,
     "chatting_server": "http://192.168.1.55",
     "chatting_port": 12345
