--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "dev:web": "cross-env NODE_ENV=development node src/server/web/main.js",
     "dev:start": "cross-env NODE_ENV=development forever start src/server/main.js && forever start src/chatting/main.js",
     "dev:stop": "cross-env NODE_ENV=development forever stop src/server/main.js && forever stop src/chatting/main.js",
-    "dev:chatting": "cross-env node src/server/chatting/main.js",
+    "dev:chatting": "cross-env NODE_ENV=development node src/server/chatting/main.js",
     "dev:inGame": "cross-env NODE_ENV=development node src/server/game/main.js",
     "deploy": "next build src/client && NODE_ENV=production forever start src/server/main.js"
   },
