next-template 8.23 버전 맞추기 작업

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "next-template",
+  "name": "steak-web",
   "version": "0.9.1",
   "private": true,
   "dependencies": {
@@ -8,42 +8,37 @@
     "animejs": "^2.2.0",
     "babel-plugin-module-resolver": "^3.1.1",
     "bip39": "^2.5.0",
+    "blockchain.info": "^2.12.1",
     "classnames": "^2.2.6",
     "compression": "^1.7.2",
     "crypto-promise": "^2.1.0",
     "express": "^4.16.3",
     "isomorphic-fetch": "^2.2.1",
     "jss": "latest",
-    "mobx": "^5.0.3",
-    "mobx-react": "^5.2.5",
     "moment": "^2.22.2",
+    "mongoose": "^5.2.8",
     "next": "^6.1.1",
     "next-routes": "^1.4.2",
     "prop-types": "latest",
     "react": "latest",
     "react-dom": "latest",
     "react-jss": "latest",
+    "react-redux": "^5.0.7",
     "recharts": "^1.1.0",
     "redis": "^2.8.0",
+    "redux": "^4.0.0",
     "request": "^2.87.0",
     "socket.io": "^2.1.1",
     "socket.io-client": "^2.1.1",
     "styled-components": "^3.3.3",
-    "web3": "^1.0.0-beta.34",
     "uuid": "^3.3.2",
-    "koa": "^2.5.3",
-    "koa-bodyparser": "^4.2.1",
-    "koa-router": "^7.4.0",
-    "koa-session": "^5.9.0",
-    "koa-static": "^5.0.0"
+    "web3": "^1.0.0-beta.34"
   },
   "scripts": {
     "dev:web": "cross-env NODE_ENV=development node src/server/web/main.js",
-    "dev:start": "cross-env NODE_ENV=development forever start src/server/main.js && forever start src/chatting/main.js",
-    "dev:stop": "cross-env NODE_ENV=development forever stop src/server/main.js && forever stop src/chatting/main.js",
     "dev:chatting": "cross-env NODE_ENV=development node src/server/chatting/main.js",
-    "dev:ingame": "cross-env NODE_ENV=development node src/server/game/main.js",
-    "deploy": "next build src/client && NODE_ENV=production forever start src/server/main.js"
+    "dev:stop": "cross-env NODE_ENV=development node src/server/game/stop.js",
+    "deploy": "next build src/client && cross-env NODE_ENV=production node src/server/web/main.js"
   },
   "devDependencies": {
     "babel-plugin-transform-class-properties": "^6.24.1",
