scss 테스트 1차 완료

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@material-ui/core": "latest",
     "@material-ui/icons": "^1.1.0",
+    "@zeit/next-sass": "^1.0.1",
     "animejs": "^2.2.0",
     "babel-plugin-module-resolver": "^3.1.1",
     "bip39": "^2.5.0",
@@ -13,12 +14,15 @@
     "compression": "^1.7.2",
     "crypto-promise": "^2.1.0",
     "express": "^4.16.3",
+    "include-media": "^1.4.9",
     "isomorphic-fetch": "^2.2.1",
     "jss": "latest",
     "moment": "^2.22.2",
     "mongoose": "^5.2.8",
-    "next": "^6.1.1",
+    "next": "^7.0.1",
     "next-routes": "^1.4.2",
+    "node-sass": "^4.9.3",
+    "open-color": "^1.6.3",
     "prop-types": "latest",
     "react": "latest",
     "react-dom": "latest",
