--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "redis": "^2.8.0",
     "redux": "^4.0.0",
     "request": "^2.87.0",
+    "sass-loader": "^7.1.0",
     "socket.io": "^2.1.1",
     "socket.io-client": "^2.1.1",
     "styled-components": "^3.3.3",
