--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "socket.io": "^2.1.1",
     "socket.io-client": "^2.1.1",
     "styled-components": "^3.3.3",
+    "url-loader": "^1.1.1",
     "uuid": "^3.3.2",
     "web3": "^1.0.0-beta.34"
   },
