--- a/package.json
+++ b/package.json
@@ -11,18 +11,21 @@
     "bip39": "^2.5.0",
     "blockchain.info": "^2.12.1",
     "classnames": "^2.2.6",
+    "codemirror": "^5.40.2",
     "compression": "^1.7.2",
     "crypto-promise": "^2.1.0",
     "express": "^4.16.3",
     "include-media": "^1.4.9",
     "isomorphic-fetch": "^2.2.1",
     "jss": "latest",
+    "marked": "^0.5.1",
     "moment": "^2.22.2",
     "mongoose": "^5.2.8",
     "next": "^7.0.1",
     "next-routes": "^1.4.2",
     "node-sass": "^4.9.3",
     "open-color": "^1.6.3",
+    "prismjs": "^1.15.0",
     "prop-types": "latest",
     "react": "latest",
     "react-dom": "latest",
