store, containers 사용 방식 Test, 기본 UX 적용 테스트

--- a/.babelrc
+++ b/.babelrc
@@ -15,6 +15,8 @@
           "@shapes"      : "./src/client/shapes",
           "@lib"         : "./src/client/lib",
           "@pages"       : "./src/client/pages",
+          "@store"       : "./src/client/store",
+          "@containers"  : "./src/client/containers",
           "@common"      : "./src/common",
           "@server"      : "./src/server",
           "@src"         : "./src"
