--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "compression": "^1.7.2",
     "crypto-promise": "^2.1.0",
     "express": "^4.16.3",
+    "immutable": "^3.8.2",
     "include-media": "^1.4.9",
     "isomorphic-fetch": "^2.2.1",
     "jss": "latest",
@@ -34,6 +35,8 @@
     "recharts": "^1.1.0",
     "redis": "^2.8.0",
     "redux": "^4.0.0",
+    "redux-actions": "^2.6.1",
+    "redux-pender": "^1.2.1",
     "request": "^2.87.0",
     "sass-loader": "^7.1.0",
     "socket.io": "^2.1.1",
