--- a/src/common/config.json
+++ b/src/common/config.json
@@ -7,7 +7,7 @@
     "chattingURL": "http://192.168.1.55:12345",
     "gameStopURL": "http://192.168.1.55:12346",
     "bitcoinNetwork": 3,
-    "mongodb": "mongodb://admin:!numix0083!@192.168.1.182:20083,192.168.1.182:20085/admin?replicaSet=rs1"
+    "mongodb": "mongodb://localhost:27017"
   },
   "development": {
     "serverURL": "http://localhost:9999/api",
