--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "redux": "^4.0.0",
     "redux-actions": "^2.6.1",
     "redux-pender": "^1.2.1",
+    "remove-markdown": "^0.3.0",
     "request": "^2.87.0",
     "sass-loader": "^7.1.0",
     "socket.io": "^2.1.1",
