--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-dom": "latest",
     "react-jss": "latest",
     "react-redux": "^5.0.7",
+    "react-responsive": "^5.0.0",
     "recharts": "^1.1.0",
     "redis": "^2.8.0",
     "redux": "^4.0.0",
@@ -42,6 +43,7 @@
     "sass-loader": "^7.1.0",
     "socket.io": "^2.1.1",
     "socket.io-client": "^2.1.1",
+    "style-loader": "^0.23.0",
     "styled-components": "^3.3.3",
     "url-loader": "^1.1.1",
     "uuid": "^3.3.2",
