--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@zeit/next-sass": "^1.0.1",
     "animejs": "^2.2.0",
     "babel-plugin-module-resolver": "^3.1.1",
+    "babel-polyfill": "^6.26.0",
     "bip39": "^2.5.0",
     "blockchain.info": "^2.12.1",
     "classnames": "^2.2.6",
@@ -38,6 +39,8 @@
     "redux": "^4.0.0",
     "redux-actions": "^2.6.1",
     "redux-pender": "^1.2.1",
+    "redux-devtools-extension": "^2.13.2",
+    "redux-thunk": "^2.1.0",
     "remove-markdown": "^0.3.0",
     "request": "^2.87.0",
     "sass-loader": "^7.1.0",
